# IcedPyGui

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: CI.yml
icedpygui/: __init__.py  enums.py  icedpygui.pyi
py_examples/: Py_event_window.py  arrows.py  demo.py  misc.py  py_arrows.py  py_button_update.py  py_buttons.py  py_card.py  py_checkbox.py  py_checkbox_simple.py  py_color_picker.py  py_date_picker.py  py_event_keyboard.py  py_event_mouse.py  py_image.py  py_menu.py  py_misc.py  py_multi_window.py  py_pane_grid.py  py_pick_list.py  py_progress_bar.py  py_radio.py  py_rule.py  py_scrollable.py  py_selectable_text.py  py_slider_pg_bar.py  py_space.py  py_table.py  py_text_editor.py  py_text_input.py  py_timer.py  py_toggler.py  py_windows.py  readme.py
python_demo/: defined_colors.py  demo.py  py_books.py  py_button.py  py_button_styling.py  py_buttons.py  py_checkbox_simple.py  py_checkbox_styling.py  py_container_style.py  py_date_picker.py  py_image.py  py_menu.py  py_menu_styling.py  py_modal.py  py_mousarea.py  py_picklist_styling.py  py_progress_bar.py  py_radio.py  py_radio_text_quantity.py  py_rule.py  py_scrollable.py  py_scrollable_styling.py  py_slider_pg_bar.py  py_styling.py  py_table.py  py_text_input.py  py_text_input_styling.py  py_timer.py  py_toggler.py  py_toggler_styling.py  styling.py  temp.py
python_demo/resources/: books.csv  books_bkup.csv  books_original.csv  small_books.csv
python_examples/: defined_colors.py  demo.py  py_books.py  py_button.py  py_button_add_new.py  py_button_update.py  py_canvas.py  py_canvas_draw.py  py_canvas_draw_wip.py  py_card.py  py_chart.py  py_checkbox_simple.py  py_checkbox_styling.py  py_color_picker.py  py_column.py  py_container.py  py_container_style.py  py_container_styling.py  py_date_picker.py  py_divider_combined.py  py_divider_horizontal.py  py_divider_vertical.py  py_event_keyboard.py  py_event_mouse.py  py_event_window.py  py_image.py  py_menu.py  py_menu_styling.py  py_menu_styling_wip.py  py_modal.py  py_mousarea.py  py_mouse_area.py  py_move_widget.py  py_picklist_styling.py  py_progress_bar.py  py_radio.py  py_radio_test_quantity.py  py_radio_text_quantity.py  py_row.py  py_rule.py  (+24 more)
python_examples/resources/: books.csv  books_bkup.csv  books_original.csv  canvas.json  canvas_data.json
resources/: icedpygui_icon.xcf
src/: app.rs  lib.rs
src/canvas/: canvas_helpers.rs  colors.rs  draw_canvas.rs  fonts.rs  geometries.rs  import_export.rs  mod.rs  path_builds.rs
src/chart/: chart_helpers.rs  component.rs  draw_chart.rs  geometries.rs  import_export.rs  mod.rs  path.rs  path_builds.rs  themes.rs
src/graphics/: bootstrap.rs  bootstrap_icon.rs  colors.rs  mod.rs  nerd.rs  required.rs
src/iced_aw_widgets/: card.rs  mod.rs
src/iced_aw_widgets/menu/: menu_bar.rs  menu_bar_overlay.rs  menu_bar_style.rs  menu_tree.rs  mod.rs  quad.rs  style.rs
src/iced_widgets/: card.rs  checkbox.rs  mod.rs  mousearea.rs  mousearea_table.rs  scrollable.rs
src/iced_widgets/menu/: common.rs  menu_bar_overlay.rs
src/ipg_widgets/: callbacks.rs  divider.rs  helpers.rs  ipg_button.rs  ipg_canvas.rs  ipg_canvas_new.rs  ipg_canvas_old2.rs  ipg_card.rs  ipg_chart.rs  ipg_checkbox.rs  ipg_color_picker.rs  ipg_column.rs  ipg_container.rs  ipg_date_picker.rs  ipg_divider.rs  ipg_enums.rs  ipg_events.rs  ipg_image.rs  ipg_menu.rs  ipg_modal.rs  ipg_mousearea.rs  ipg_opaque.rs  ipg_pane_grid.rs  ipg_pick_list.rs  ipg_progress_bar.rs  ipg_radio.rs  ipg_row.rs  ipg_rule.rs  ipg_scrollable.rs  ipg_selectable_text.rs  ipg_separator.rs  ipg_slider.rs  ipg_space.rs  ipg_stack.rs  ipg_svg.rs  ipg_table copy.rs  ipg_table.rs  ipg_table_recent.rs  ipg_text.rs  ipg_text_editor.rs  (+11 more)
src/style/: ipg_palette.rs  mod.rs  styling.rs
src/table/: divider.rs  mod.rs  style.rs  table.rs
