[package]
authors = ["Charles Ray <icedpygui@gmail.com>"]
name = "IcedPyGui"
version = "0.1.0"
edition = "2021"
license = "GNU"
description = "Python wrapper for Rust Iced"
readme = "README.md"

[lib]
name = "icedpygui"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
iced = { version = "0.12.1", features = ["advanced", "debug", "highlighter", "image", 
                                        "lazy", "smol", "svg", "tokio", "multi-window"] }

tokio = { version = "1.0", features = ["fs"]}
iced_aw = { version = "0.8.0", features = ["card", "color_picker", "icons", "quad",]}
rfd = "0.13"
once_cell = "1.19.0"
chrono = "0.4.31"
unicode-segmentation = "1.9.0"

[build-dependencies]
pyo3-build-config = { version = "0.21.2", features = ["resolve-config"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3