[package]
authors = ["Charles Ray <icedpygui@gmail.com>"]
name = "IcedPyGui"
version = "0.3.0"
edition = "2021"
license = "GNU"
description = "Python wrapper for Rust Iced"
readme = "README.md"

[lib]
name = "icedpygui"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
iced = { version = "0.13.1", features = ["advanced", "canvas", "debug", "highlighter", "image", 
                                        "lazy", "smol", "svg", "tokio", "multi-window", "auto-detect-theme"] }

tokio = { version = "1.0", features = ["fs"]}
rfd = "0.13"
once_cell = "1.19.0"
chrono = "0.4.31"
unicode-segmentation = "1.9.0"
palette = "0.7.4"
# rand = "0.8.5"
# rand_chacha = "0.3.1"
seahash = "4.1.0"
serde = "1.0.201"
serde_json = "*"

[build-dependencies]
pyo3-build-config = { version = "0.22.0", features = ["resolve-config"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
