[package]
authors = ["Charles Ray <icedpygui@gmail.com>"]
name = "IcedPyGui"
version = "0.4.0"
edition = "2021"
license = "GNU"
description = "Python wrapper for Rust Iced"
readme = "README.md"

[lib]
name = "icedpygui"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
iced = { version = "0.13.1", features = ["advanced", "canvas", "debug", "highlighter", "image", 
                                        "lazy", "smol", "svg", "tokio", "multi-window", "auto-detect-theme"] }
iced_aw = {git = "https://github.com/iced-rs/iced_aw", rev = "3485f3a"}
svg-simple-parser = "0.0.6"
charts-rs = "0.3.22"

polars = { version="0.46.0", features=["strings", "lazy"]}
pyo3-polars = "0.20.0"

tokio = { version = "1.0", features = ["fs"]}
rfd = "0.13"
once_cell = "1.19.0"
chrono = "0.4.31"
unicode-segmentation = "1.9.0"
palette = "0.7.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
phf = { version = "0.11", default-features = false }
regex = "1.11.1"

[build-dependencies]
pyo3-build-config = { version = "0.23.3", features = ["resolve-config"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
