[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "IcedPyGui"
description = "Python wrapper for Rust Iced"
authors = [
    {name = 'Charles Ray', email = 'icedpygui@gmail.com'}
]
# PyO3 doesn't support python 3.13 yet.
requires-python = ">=3.9, < 3.13"
keywords = ["iced", "iced_aw", "gui", "rust", "python"]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = 'https://github.com/icedpygui/IcedPyGui'

[tool.maturin]
features = ["pyo3/extension-module"]
